# gopro-tui

./: .rustfmt.toml  Cargo.toml  notes.md  shell.nix
src/: args.rs  channel.rs  dirs.rs  error.rs  main.rs  mode.rs  mpv.rs  utils.rs  writer.rs
src/cache/: mod.rs  user.rs  version.rs
src/importer/: datetime.rs  ffmpeg.rs  mod.rs
src/importer/gpmf/: mod.rs  utils.rs
src/reader/: datetime.rs  destinations.rs  ffmpeg.rs  mod.rs
src/reader/gpmf/: mod.rs  types.rs
src/ui/: colors.rs  events.rs  mod.rs
src/ui/events/: channel.rs  mod.rs
src/ui/render/: mod.rs  rows.rs  search.rs  sections.rs  table.rs
src/ui/state/: destination.rs  focus.rs  mod.rs  progress.rs  session.rs
