[package]
name = "importer-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
crossterm = "0.23"
nom = "7.1.1"
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
stable-eyre = "0.2"
tui = "0.18"
