[package]
name = "gopro-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
crossterm = "0.23"
directories = "4.0"
mpvipc = "1.1.9"
nom = "7.1.1"
regex = "1.5.6"
rff = "0.3.0"
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
stable-eyre = "0.2"
tui = "0.18"
uuid = { version = "1.1.1", features = ["serde", "v4"] }
walkdir = "2"
